@startuml
skinparam linetype ortho

namespace M03_Web_Municipalites_REST01 << apim >> {
    class Program {
        {static} Main(args:string[]) : void
    }

    class MunicipalitesController {
        - m_manipulationMunicipalites : ManipulationMunicipalites
        + ctor(p_manipulationMunicipalites : ManipulationMunicipalites)
        + Get() : ActionResult<IEnumerable<MunicipaliteModel>>
        + Get(municipaliteId : int) : ActionResult<MunicipaliteModel>
        + Post(p_municipalite : MunicipaliteModel) : ActionResult
        + Put(municipaliteId : int, p_municipalite : MunicipaliteModel) : ActionResult
        + Delete(municipaliteId : int) : ActionResult
    }

    class MunicipaliteModel {
        + ctor()
        + ctor(p_municipalite:srvm.Municipalite)
        + CodeGeographique : int <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + AdresseCourriel : string <<get>> <<set>>
        + AdresseWeb : string <<get>> <<set>>
        + DateProchaineElection : datetime? <<get>> <<set>>
        + VersEntite() : srvm.Municipalite
    }

    MunicipalitesController ..> MunicipaliteModel

}

namespace M01_Srv_Municipalite << srvm >> {
    class ManipulationMunicipalites {
        - m_depotMunicipalite : IDepotMunicipalites
        + ctor(p_depotMunicipalite : IDepotMunicipalites)
        + ListerMunicipalites() : IEnumerable<Municipalite>
        + ObtenirMunicipalite(p_codeGeographique:int) : Municipalite
        + SupprimerMunicipalite(p_codeGeographique:int) : void
        + AjouterMunicipalite(p_municipalite:Municipalite) : Municipalite
        + MAJMunicipalite(p_municipalite:Municipalite) : void
    }

    MunicipalitesController -d-> ManipulationMunicipalites

}

namespace M01_Entite_Municipalite << entitem >> {
    interface IDepotMunicipalites {
        + ChercherMunicipaliteParCodeGeographique(p_codeGeographique : int) : Municipalite?
        + ListerMunicipalitesActives() : IEnumerable<Municipalite>
        + DesactiverMunicipalite(p_municipalite : Municipalite) : void
        + AjouterMunicipalite(p_municipalite : Municipalite) : void
        + MAJMunicipalite(p_municipalite : Municipalite) : void
    }

    class Municipalite {
        + ctor(p_municipaliteId : int, p_nomMunicipalite : string, p_adresseCourriel : string, p_adresseWeb : string, p_dateProchaineElection : DateTime, p_actif : bool = true)
        + CodeGeographique : int <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + AdresseCourriel : string? <<get>> <<set>>
        + AdresseWeb : string? <<get>> <<set>>
        + DateProchaineElection : datetime? <<get>> <<set>>
        + <<override>> Equals(obj : object) : bool
        + <<override>> GetHashCode() : int
    }

    M01_Srv_Municipalite.ManipulationMunicipalites -> IDepotMunicipalites
    IDepotMunicipalites ..> Municipalite
    M01_Srv_Municipalite.ManipulationMunicipalites ..> Municipalite
    M03_Web_Municipalites_REST01.Program ..> IDepotMunicipalites : configure injection (depot)
}

namespace M01_DAL_Municipalite << dalm >> {
    class ApplicationDbContext {
        ~ MUNICIPALITES : DbSet<Municipalite> <<get>> <<set>>
    }

    class DepotMunicipalitesSQLServer {
        + ctor(p_contexte : MunicipaliteContextSQLServer)
        + AjouterMunicipalite(p_municipalite : srvm.Municipalite) : void
        + ChercherMunicipaliteParCodeGeographique(p_codeGeographique : int) : srvm.Municipalite
        + DesactiverMunicipalite(p_municipalite : srvm.Municipalite) : void
        + ListerMunicipalitesActives() : IEnumerable<srvm.Municipalite>
        + MAJMunicipalite(p_municipalite : srvm.Municipalite) : void
    }


    class Municipalite {
        + MunicipaliteId : int <<get>> <<set>>
        + NomMunicipalite : string <<get>> <<set>>
        + AdresseCourriel : string <<get>> <<set>>
        + AdresseWeb : string <<get>> <<set>>
        + DateProchaineElection : datetime? <<get>> <<set>>
        + Actif : bool <<get>> <<set>>
        + ctor()
        + ctor(p_municipalite:srvm.Municipalite)
        + VersEntite() : srvm.Municipalite
    }

    DepotMunicipalitesSQLServer ..|> M01_Entite_Municipalite.IDepotMunicipalites
    DepotMunicipalitesSQLServer --> ApplicationDbContext
    DepotMunicipalitesSQLServer ..> Municipalite
}

M03_Web_Municipalites_REST01 .u[hidden]. M01_Srv_Municipalite
M01_Srv_Municipalite .l[hidden]. M01_Entite_Municipalite


@enduml
